--- a/Resources.html
+++ b/Resources.html
@@ -11,11 +11,9 @@
         <h2>Hevenly Hands Christian Counseling</h2>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Blog and Resources</a></li>
-                <li>Contact</a></li>
-                <li>Donate</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About</li>
+                <li><a href="resources.html">Blogs and Resouces</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +24,7 @@
     <section>
         <h2>Story of the Week</h2>
         <p>The biblical story of Abraham, found in the Book of Genesis, is foundational to Judaism, Christianity, and Islam. Abraham, originally named Abram, is considered the patriarch of these faiths. Abraham's story is one of faith, obedience, and the covenant between God and his chosen people. He is revered as a model of faith in monotheistic traditions.</p>
-        <img src = "Story.png">
+        <img src = "story.png">
     </section>
 
     <section>
@@ -35,7 +33,7 @@
     </section>
 
     <section>
-        <img src = "Scripture.png">
+        <img src = "scripture.png">
         <h3>Scripture Of The Week</h3>
         <p>This verse is often interpreted as a declaration of confidence in the power and support that believers receive from their faith in Jesus Christ. It emphasizes the idea that with the strength provided by Christ, individuals can overcome challenges and accomplish their goals. It's a source of encouragement and inspiration for many Christians, reminding them of their reliance on God's empowerment in all aspects of life.</p>
     </section>
@@ -63,7 +61,7 @@
             <a href="https://calendly.com/your-username" class="cta-button" target="_blank">Book an Appointment</a>
         </section>
         <section>
-            <img src = "Photo.png">
+            <img src = "photo.png">
             <p>
                 Owner Email
             </p>
