Update and rename About Us.html to about_us.html

--- a/about_us.html
+++ b/about_us.html
@@ -11,11 +11,9 @@
         <h2>Hevenly Hands Christian Counseling</h2>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Blog and Resources</a></li>
-                <li>Contact</a></li>
-                <li>Donate</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About</li>
+                <li><a href="resources.html">Blogs and Resouces</a></li>
             </ul>
         </nav>
     </header>
@@ -71,4 +69,3 @@
 
     </body>
     </html>
-    
