--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
         <h2>Hevenly Hands Christian Counseling</h2>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Blog and Resources</a></li>
-                <li>Contact</a></li>
-                <li>Donate</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About</li>
+                <li><a href="resources.html">Blogs and Resouces</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <img src="Video.jpg">
+            <img src="video.jpg">
             <p>
                 At Heavenly Hands Christian Counesling, we believe in the trans-formative power of faith and counseling. Our mission
 is to provide compassionate, faith-based counseling services to individuals and families seeking healing
@@ -55,7 +53,7 @@ through life's challenges with grace and understanding.
             <a href="https://calendly.com/your-username" class="cta-button" target="_blank">Book an Appointment</a>
         </section>
         <section>
-            <img src = "Photo.png">
+            <img src = "photo.png">
             <p>
                 Owner Email
             </p>
