--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="mystyle.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LCGK66CWD"></script>
 <script>
@@ -12,7 +13,12 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heavenly Hands Chrisitan Counseling</title>
+    <title>Heavenly Hands Christian Counseling</title>
+    <meta charset="UTF-8">
+  <meta name="description" content="Heavenly Hands Christian Counseling">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Bryce Jackson">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -21,7 +27,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About</li>
+                <li><a href="about_us.html">About</a></li>
                 <li><a href="resources.html">Blogs and Resouces</a></li>
             </ul>
         </nav>
@@ -34,14 +40,14 @@
 is to provide compassionate, faith-based counseling services to individuals and families seeking healing
 and growth. Grounded in Christian principles, our experienced counselors are dedicated to guiding you
 through life's challenges with grace and understanding.
-<a href="your-journey-url" class="cta-button">Begin Your Journey to Become Closer to God</a>
+<a href="https://your-journey-url" class="cta-button">Begin Your Journey to Become Closer to God</a>
 
             </p>
         </section>
     </main>
     <footer>
         <section>
-        <form action="submit-form-url" method="post">
+        <form action="https://submit-form-url" method="post">
             <label for="firstname">First Name:</label><br>
             <input type="text" id="firstname" name="firstname" required><br><br>
             
