--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="mystyle.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LCGK66CWD"></script>
 <script>
@@ -47,6 +48,10 @@
         <p>This verse is often interpreted as a declaration of confidence in the power and support that believers receive from their faith in Jesus Christ. It emphasizes the idea that with the strength provided by Christ, individuals can overcome challenges and accomplish their goals. It's a source of encouragement and inspiration for many Christians, reminding them of their reliance on God's empowerment in all aspects of life.</p>
     </section>
 
+    <section>
+        <h4>Client Testimonials</h4>
+        
+    </section>
     <footer>
         <section>
         <form action="submit-form-url" method="post">
