--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="logo.jpg" alt="logo"></h1>
+        <h1><img src="./logo.jpg" alt="logo"></h1>
         <h2>Hevenly Hands Christian Counseling</h2>
         <nav>
             <ul>
