--- a/resources.html
+++ b/resources.html
@@ -77,15 +77,15 @@
         <section>
             <img src = "photo.png">
             <p>
-                Owner Email
+                HeavenlyHandsBeauty@yahoo.com
             </p>
             <p>
-                Owner Cell Phone Number
+                864-516-4278
             </p>
+            <p>The Lord is my light and my salvation— whom shall I fear? The Lord is the stronghold of my life— of whom shall I be afraid?
+                Psalm 27:1</P>
+            <p>&copy; 2024 Heavenly Hands Christian Counseling</p>
         </section>
-
     </footer>
-
-
 </body>
 </html>
