--- a/about_us.html
+++ b/about_us.html
@@ -43,7 +43,7 @@
         <section>
             <h2>Meet the Owner</h2>
             <div class="content">
-                <img src="Photo.png">
+                <img src="photo.png">
                 <p>Hi! Let Me introduce myself
                     My Name is Sharon Jones Fuller
                     I was born in a two parent household
