--- a/about_us.html
+++ b/about_us.html
@@ -43,7 +43,7 @@
         <section>
             <h2>Meet the Owner</h2>
             <div class="content">
-                <img src="Photo.png">
+                <img src="photo.jpg">
                 <p>Hi! Let Me introduce myself
                     My Name is Sharon Jones Fuller
                     I was born in a two parent household
@@ -64,7 +64,7 @@
         <section>
             <h2>Downtown Greenville, SC</h2>
             <div class="pos_cen">
-                <img class="img_deg" img src="Location.jpg">
+                <img class="img_deg" img src="location.jpg">
                 <p>Located in the heart of downtown Greenville, SC, our Christian counseling establishment stands as a beacon of hope and healing for individuals and families seeking solace and guidance.
                     Nestled amidst the vibrant energy of this thriving community, we offer more than just a place of refuge; we provide a sanctuary where faith meets compassion
                     and where the transformative power of Christian counseling takes root. With our roots firmly planted in the values of love, empathy, and understanding, we strive to illuminate the path toward healing and spiritual growth.
