--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About</a></li>
-                <li><a href="resources.html">Blogs and Resouces</a></li>
+                <li><a href="resources.html">Blogs and Resources</a></li>
             </ul>
         </nav>
     </header>
@@ -68,20 +68,16 @@
                 <input type="submit" value="Submit">
             </form>
         </section>
-
+    
         <section>
-            <a href="https://calendly.com/your-username" class="cta-button" target="_blank">Book an Appointment</a>
+            <a href="https://calendly.com/your-username" class="book-appointment" target="_blank">Book an Appointment</a>
         </section>
+    
         <section>
-            <img src = "photo.png">
-            <p>
-                HeavenlyHandsBeauty@yahoo.com
-            </p>
-            <p>
-                864-516-4278
-            </p>
-            <p>The Lord is my light and my salvation— whom shall I fear? The Lord is the stronghold of my life— of whom shall I be afraid?
-                Psalm 27:1</P>
+            <img src="photo.png" class="footer-img">
+            <p id="contact-email">HeavenlyHandsBeauty@yahoo.com</p>
+            <p>864-516-4278</p>
+            <p>The Lord is my light and my salvation— whom shall I fear? The Lord is the stronghold of my life— of whom shall I be afraid? Psalm 27:1</p>
             <p>&copy; 2024 Heavenly Hands Christian Counseling</p>
         </section>
     </footer>
