--- a/resources.html
+++ b/resources.html
@@ -18,12 +18,12 @@
 <body>
     <header>
         <h1><img src="logo.jpg" alt="logo"></h1>
-        <h2>Hevenly Hands Christian Counseling</h2>
+        <h2>Heavenly Hands Christian Counseling</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About</li>
-                <li><a href="resources.html">Blogs and Resouces</a></li>
+                <li><a href="resources.html">Blogs and Resources</a></li>
             </ul>
         </nav>
     </header>
@@ -48,10 +48,6 @@
         <p>This verse is often interpreted as a declaration of confidence in the power and support that believers receive from their faith in Jesus Christ. It emphasizes the idea that with the strength provided by Christ, individuals can overcome challenges and accomplish their goals. It's a source of encouragement and inspiration for many Christians, reminding them of their reliance on God's empowerment in all aspects of life.</p>
     </section>
 
-    <section>
-        <h4>Client Testimonials</h4>
-        
-    </section>
     <footer>
         <section>
         <form action="submit-form-url" method="post">
@@ -75,7 +71,7 @@
             <a href="https://calendly.com/your-username" class="cta-button" target="_blank">Book an Appointment</a>
         </section>
         <section>
-            <img src = "photo.png">
+            <img src="photo.png" class="footer-img">
             <p>
                 HeavenlyHandsBeauty@yahoo.com
             </p>
