--- a/about_us.html
+++ b/about_us.html
@@ -13,6 +13,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heavenly Hands Christian Counseling - About Us</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Heavenly Hands Christian Counseling">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Bryce Jackson">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
         .imge_deg
         {
@@ -60,13 +65,14 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About</a></li>
                 <li><a href="resources.html">Blogs and Resources</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <section>
-            <h1>About Us</h1>
+            <p style="font-size: 24px; font-weight: bold; font-style: italic;">About Us</p>
         </section>
 
         <section>
