--- a/index.html
+++ b/index.html
@@ -48,23 +48,31 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About</a></li>
                 <li><a href="resources.html">Blogs and Resources</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
+    <section>
+        <p style="font-size: 24px; font-weight: bold; padding-left: 10px;font-style: italic;">Welcome!</p>
+    </section>
     <main>
-        <section>
-            <img src="video.jpg">
+        <section style="text-align: center;">
+            <video controls style="display: inline-block; width: 40%;"> <!-- Adjust the width as needed -->
+                <source src="Video.mov" type="video/quicktime">
+                Your browser does not support the video tag.
+            </video>
             <p>
-                Welcome to Heavenly Hands Christian Counseling, where healing meets faith and compassion guides the journey towards wholeness. At Heavenly Hands, we understand the intricate balance between the challenges of life and the transformative power of faith. With a steadfast commitment to integrating biblical principles with professional counseling techniques, we offer a sanctuary for individuals and families seeking guidance, support, and renewal on their spiritual and emotional paths.At Heavenly Hands Christian Counseling, our mission is simple: to offer hope, healing, and restoration through the transformative power of God's love. We invite you to embark on this journey of self-discovery, healing, and spiritual growth with us. Together, let us embark on a path towards wholeness, guided by faith, compassion, and the loving hands of our Creator. Welcome to Heavenly Hands, where healing begins and faith abounds.
+                Welcome to Heavenly Hands Christian Counseling, where healing meets faith and compassion guides the journey towards wholeness. At Heavenly Hands, we understand the intricate balance between the challenges of life and the transformative power of faith. With a steadfast commitment to integrating biblical principles with professional counseling techniques, we offer a sanctuary for individuals and families seeking guidance, support, and renewal on their spiritual and emotional paths. At Heavenly Hands Christian Counseling, our mission is simple: to offer hope, healing, and restoration through the transformative power of God's love. We invite you to embark on this journey of self-discovery, healing, and spiritual growth with us. Together, let us embark on a path towards wholeness, guided by faith, compassion, and the loving hands of our Creator. Welcome to Heavenly Hands, where healing begins and faith abounds.
             </p>
         </section>
         <section class="center">
             <a href="https://your-journey-url" class="cta-button">Begin Your Journey to Become Closer to God</a>
         </section>
     </main>
-    <div class="mission-section">
+    <div class="mission-section" style="text-align: center; padding: 0 20px;">
+        <h2 style="font-weight: bold; font-style: italic;">Mission Statement</h2>
         <p>We believe in the transformative power of faith and counseling. Our mission is to provide compassionate, faith-based counseling services to individuals and families seeking healing and growth. Grounded in Christian principles, our experienced counselors are dedicated to guiding you through life's challenges with grace and understanding.</p>
-    </div>
+    </div>     
     <footer>
         <section>
             <form action="https://submit-form-url" method="post">
