--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="mystyle.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LCGK66CWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-6LCGK66CWD');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heavenly Hands Chrisitan Counseling</title>
-</head>
+    <title>Heavenly Hands Christian Counseling</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Heavenly Hands Christian Counseling">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Bryce Jackson">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <header>
         <h1><img src="logo.jpg" alt="logo"></h1>
