--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
     </section>
     <main>
         <section style="text-align: center;">
-            <video controls style="display: inline-block; width: 40%;"> <!-- Adjust the width as needed -->
-                <source src="Video.mov" type="video/quicktime">
-                Your browser does not support the video tag.
-            </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YCb9T-yUeQU" frameborder="0" allowfullscreen style="margin: 0 auto;"></iframe>
             <p>
                 Welcome to Heavenly Hands Christian Counseling, where healing meets faith and compassion guides the journey towards wholeness. At Heavenly Hands, we understand the intricate balance between the challenges of life and the transformative power of faith. With a steadfast commitment to integrating biblical principles with professional counseling techniques, we offer a sanctuary for individuals and families seeking guidance, support, and renewal on their spiritual and emotional paths. At Heavenly Hands Christian Counseling, our mission is simple: to offer hope, healing, and restoration through the transformative power of God's love. We invite you to embark on this journey of self-discovery, healing, and spiritual growth with us. Together, let us embark on a path towards wholeness, guided by faith, compassion, and the loving hands of our Creator. Welcome to Heavenly Hands, where healing begins and faith abounds.
             </p>
