--- a/resources.html
+++ b/resources.html
@@ -96,7 +96,7 @@
     <section>
         <h4>Story Of The Week</h4>
         <div class="pos_cen">
-        <img class="imges_deg" img src="abraham.png">
+        <img class="imges_deg" img src="abraham.png" alt="Story">
             <p>The story of Abraham, found in the Book of Genesis in the Bible, is foundational to Judaism, Christianity, and Islam. Abraham, originally named Abram, is considered the patriarch of these faiths. The narrative unfolds with God's call to Abram to leave his homeland and journey to a land that God would show him. In return, God promises to make Abram's descendants into a great nation and bless all the families of the earth through him 
                 Throughout his life, Abraham encounters various trials and tests of faith, including the challenge of leaving his homeland, the promise of a son in his old age, and the ultimate test of being asked to sacrifice his son Isaac. In each instance, Abraham demonstrates unwavering faith and obedience to God's commands.
                 One can apply the story of Abraham to their life in several ways:
@@ -137,7 +137,7 @@
     <section>
         <h4>Scripture Of The Week</h4>
         <div class="pos_cen">
-        <img class="imges_deg" img src="scripture.png">
+        <img class="imges_deg" img src="scripture.png" alt="scripture">
         <p>In essence, Philippians 4:13 encapsulates the idea that believers can accomplish anything, not through their own power alone, but through the empowerment they receive from their faith in Jesus Christ. 
             It emphasizes the profound connection between the believer and God, 
             highlighting the belief that God provides the necessary strength and support for individuals to face difficulties and achieve their goals.
