--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="b&r.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LCGK66CWD"></script>
     <script>
@@ -97,48 +97,49 @@
         <h4>Story Of The Week</h4>
         <div class="pos_cen">
             <img class="imges_deg" src="abraham.png" alt="Abraham Story">
-            <p>The story of Abraham, found in the Book of Genesis in the Bible, is foundational to Judaism, Christianity, and Islam. Abraham, originally named Abram, is considered the patriarch of these faiths. The narrative unfolds with God's call to Abram to leave his homeland and journey to a land that God would show him. In return, God promises to make Abram's descendants into a great nation and bless all the families of the earth through him 
+            <p style="text-align: center; display: inline;">The story of Abraham, found in the Book of Genesis in the Bible, is foundational to Judaism, Christianity, and Islam. Abraham, originally named Abram, is considered the patriarch of these faiths. The narrative unfolds with God's call to Abram to leave his homeland and journey to a land that God would show him. In return, God promises to make Abram's descendants into a great nation and bless all the families of the earth through him 
                 Throughout his life, Abraham encounters various trials and tests of faith, including the challenge of leaving his homeland, the promise of a son in his old age, and the ultimate test of being asked to sacrifice his son Isaac. In each instance, Abraham demonstrates unwavering faith and obedience to God's commands.
                 One can apply the story of Abraham to their life in several ways:
                 Faith and Obedience: Abraham's story underscores the importance of faith and obedience in one's relationship with God. Despite facing uncertainty and challenges, Abraham trusted in God's promises and followed His guidance without hesitation. Similarly, individuals can cultivate a deeper connection with God by trusting in His plans and obeying His commands, even when it requires stepping into the unknown.</p>
         </div>
     </section>
+    <main>
+        <div class="row2">
+            <div class="column2">
+                <img src="testimonial.png" alt="Testimonial 1">
+            </div>
+            <div class="column2">
+                <img src="testimonial.png" alt="Testimonial 2">
+            </div>
+            <div class="column2">
+                <img src="testimonial.png" alt="Testimonial 3">
+            </div>
+        </div>
 
-    <div class="row2">
-        <div class="column2">
-            <img src="testimonial.png" alt="Testimonial 1">
+        <div class="row">
+            <div class="column">
+                <p>"Working with Heavenly Hands Christian Counseling has truly been a transformative experience for me. When I first reached out for counseling, I was struggling with overwhelming anxiety and a sense of hopelessness. However, from the moment I stepped into their office, I felt a sense of warmth and acceptance that immediately put me at ease. My counselor listened with empathy and understanding, providing me with practical tools and biblical insights to navigate through my challenges. Through our sessions, I have gained a deeper understanding of myself, found healing from past wounds, and discovered a renewed sense of faith and purpose. I am incredibly grateful for the support and guidance I have received from Heavenly Hands Christian Counseling, and I highly recommend their services to anyone seeking compassionate and faith-based counseling."</p>
+            </div>
+            <div class="column">
+                <p>"I cannot express enough gratitude for the impact Heavenly Hands Christian Counseling has had on my life. After experiencing a significant loss in my family, I found myself struggling to cope with grief and overwhelming sadness. Through the compassionate care and guidance of my counselor, I have been able to navigate through the grieving process with faith and resilience. My counselor provided a safe space for me to express my emotions and thoughts, offering wisdom and encouragement rooted in biblical truth. With their support, I have found healing and hope amidst the pain, and I am forever grateful for the light they have brought into my darkest moments. Heavenly Hands Christian Counseling truly embodies the love and compassion of Christ, and I wholeheartedly recommend their services to anyone in need of support and encouragement."</p>
+            </div>
+            <div class="column">
+                <p>"Choosing Heavenly Hands Christian Counseling for counseling was one of the best decisions I've ever made. As someone who has struggled with anxiety and self-doubt for years, I was hesitant to seek help. However, from the moment I reached out, I was met with kindness, understanding, and genuine care. My counselor took the time to truly listen to my concerns, offering practical strategies and biblical wisdom to help me overcome my struggles. Through our sessions, I have gained a newfound sense of confidence and peace, knowing that I am not alone in my journey. The support and guidance I have received from Heavenly Hands Christian Counseling have been invaluable, and I am grateful for the positive impact they have had on my life. I highly recommend their services to anyone seeking compassionate and effective counseling rooted in faith."</p>
+            </div>
         </div>
-        <div class="column2">
-            <img src="testimonial.png" alt="Testimonial 2">
-        </div>
-        <div class="column2">
-            <img src="testimonial.png" alt="Testimonial 3">
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="column">
-            <p>"Working with Heavenly Hands Christian Counseling has truly been a transformative experience for me. When I first reached out for counseling, I was struggling with overwhelming anxiety and a sense of hopelessness. However, from the moment I stepped into their office, I felt a sense of warmth and acceptance that immediately put me at ease. My counselor listened with empathy and understanding, providing me with practical tools and biblical insights to navigate through my challenges. Through our sessions, I have gained a deeper understanding of myself, found healing from past wounds, and discovered a renewed sense of faith and purpose. I am incredibly grateful for the support and guidance I have received from Heavenly Hands Christian Counseling, and I highly recommend their services to anyone seeking compassionate and faith-based counseling."</p>
-        </div>
-        <div class="column">
-            <p>"I cannot express enough gratitude for the impact Heavenly Hands Christian Counseling has had on my life. After experiencing a significant loss in my family, I found myself struggling to cope with grief and overwhelming sadness. Through the compassionate care and guidance of my counselor, I have been able to navigate through the grieving process with faith and resilience. My counselor provided a safe space for me to express my emotions and thoughts, offering wisdom and encouragement rooted in biblical truth. With their support, I have found healing and hope amidst the pain, and I am forever grateful for the light they have brought into my darkest moments. Heavenly Hands Christian Counseling truly embodies the love and compassion of Christ, and I wholeheartedly recommend their services to anyone in need of support and encouragement."</p>
-        </div>
-        <div class="column">
-            <p>"Choosing Heavenly Hands Christian Counseling for counseling was one of the best decisions I've ever made. As someone who has struggled with anxiety and self-doubt for years, I was hesitant to seek help. However, from the moment I reached out, I was met with kindness, understanding, and genuine care. My counselor took the time to truly listen to my concerns, offering practical strategies and biblical wisdom to help me overcome my struggles. Through our sessions, I have gained a newfound sense of confidence and peace, knowing that I am not alone in my journey. The support and guidance I have received from Heavenly Hands Christian Counseling have been invaluable, and I am grateful for the positive impact they have had on my life. I highly recommend their services to anyone seeking compassionate and effective counseling rooted in faith."</p>
-        </div>
-    </div>
     
-    <div class="row1">
-        <div class="column1"><p>- Client 1</p></div>
-        <div class="column1"><p>- Client 2</p></div>
-        <div class="column1"><p>- Client 3</p></div>
-    </div>
+        <div class="row1">
+            <div class="column1"><p>- Client 1</p></div>
+            <div class="column1"><p>- Client 2</p></div>
+            <div class="column1"><p>- Client 3</p></div>
+        </div>
+    </main>
 
     <section>
         <h4>Scripture Of The Week</h4>
         <div class="pos_cen">
             <img class="imges_deg" src="scripture.png" alt="Scripture">
-            <p>In essence, Philippians 4:13 encapsulates the idea that believers can accomplish anything, not through their own power alone, but through the empowerment they receive from their faith in Jesus Christ. 
+            <p style="text-align: center; display: inline;">In essence, Philippians 4:13 encapsulates the idea that believers can accomplish anything, not through their own power alone, but through the empowerment they receive from their faith in Jesus Christ. 
             It emphasizes the profound connection between the believer and God, 
             highlighting the belief that God provides the necessary strength and support for individuals to face difficulties and achieve their goals.
             Applying Philippians 4:13 to one's life involves cultivating a mindset of faith, perseverance, and reliance on the strength provided by a relationship with Christ. It encourages individuals to approach challenges with confidence, knowing that they are not alone in their struggles. 
