--- a/about_us.html
+++ b/about_us.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="logo.jpg" alt="logo"></h1>
+        <h1><a href="index.html"><img src="logo.jpg" alt="Heavenly Hands Logo"></a></h1>
         <h2>Heavenly Hands Christian Counseling</h2>
         <nav>
             <ul>
